--- a/match-service/docker-compose.override.yml
+++ b/match-service/docker-compose.override.yml
@@ -1,6 +1,7 @@
 services:
   match-service:
-    build: .
+    build:
+      context: ./match-service
     container_name: match-service
     ports:
       - "8083:8083"
@@ -10,3 +11,4 @@ services:
       - NEO4J_PASSWORD=admin
     depends_on:
       - neo4j
+
