--- a/match-service/docker-compose.override.yml
+++ b/match-service/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - NEO4J_URI=neo4j://neo4j:7687
       - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=admin
+      - NEO4J_PASSWORD=SS29lose
     depends_on:
       - neo4j
     networks:
@@ -17,5 +17,6 @@ services:
 networks:
   shared-network:
     external: true
+
 
 
