--- a/login-service/docker-compose.override.yml
+++ b/login-service/docker-compose.override.yml
@@ -8,7 +8,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
-      - mysql
+      - auth-mysql
     networks:
       - shared-network
 
