--- a/login-service/appsettings.json
+++ b/login-service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=mysql;port=3306;database=usersdb;user=root;password=SS29lose"
+    "DefaultConnection": "server=auth-mysql;port=3306;database=usersdb;user=root;password=SS29lose"
   },
   "Logging": {
     "LogLevel": {
