--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   postgres:
     image: postgres:15
@@ -27,10 +25,21 @@ services:
     image: neo4j:5.14
     container_name: neo4j
     ports:
-      - "7474:7474"   # Interfaz web de Neo4j
-      - "7687:7687"   # Protocolo Bolt para drivers
+      - "7474:7474"
+      - "7687:7687"
     environment:
       - NEO4J_AUTH=neo4j/SS29lose
+    networks:
+      - shared-network
+
+  auth-mysql:
+    image: mysql:8
+    container_name: auth-mysql
+    ports:
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=SS29lose
+      - MYSQL_DATABASE=usersdb
     networks:
       - shared-network
 
