--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,17 @@ services:
     networks:
       - shared-network
 
+  search-service:
+    build:
+      context: ./search-service
+    container_name: search-service
+    depends_on:
+      - redis
+    environment:
+      - REDIS_URL=redis://redis:6379
+    networks:
+      - shared-network
+
 networks:
   shared-network:
     driver: bridge
